@@ -4,10 +4,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.apache.logging.log4j.util.Strings;
 import org.edupro.web.constant.BackEndUrl;
-import org.edupro.web.model.request.MapelRequest;
-import org.edupro.web.model.response.MapelResponse;
+import org.edupro.web.model.request.KurikulumRequest;
+import org.edupro.web.model.response.KurikulumResponse;
 import org.edupro.web.model.response.Response;
-import org.edupro.web.service.MasterMapelService;
+import org.edupro.web.service.MasterKurikulumService;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
@@ -21,34 +21,34 @@ import java.util.*;
 
 @Service
 @RequiredArgsConstructor
-public class MasterMapelServiceImpl implements MasterMapelService {
+public class MasterKurikulumServiceImpl implements MasterKurikulumService {
     private final BackEndUrl backEndUrl;
     private final RestTemplate restTemplate;
     private final ObjectMapper objectMapper;
-
+    
     @Override
-    public List<MapelResponse> get() {
+    public List<KurikulumResponse> get() {
         try {
-            var url = backEndUrl.mapelUrl();
+            var url = backEndUrl.kurikulumUrl();
             ResponseEntity<Response> response = restTemplate.getForEntity(url, Response.class);
             if (response.getStatusCode() == HttpStatus.OK) {
-                return (List<MapelResponse>) response.getBody().getData();
+                return (List<KurikulumResponse>) response.getBody().getData();
             }
-        }catch (RestClientException e){
+        }catch (RestClientException e) {
             return Collections.emptyList();
         }
 
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
-    public Optional<MapelResponse> getById(String id) {
+    public Optional<KurikulumResponse> getById(String id) {
         try {
-            var url = Strings.concat(backEndUrl.mapelUrl(), "/"+ id);
-            ResponseEntity<Response> response = restTemplate.getForEntity(url, Response.class);
+            var url = Strings.concat(backEndUrl.kurikulumUrl(), "/"+ id);
+            ResponseEntity<Response> response = restTemplate.getForEntity( url, Response.class);
             if (response.getStatusCode() == HttpStatus.OK) {
                 byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
-                MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
+                KurikulumResponse result = objectMapper.readValue(json, KurikulumResponse.class);
 
                 return Optional.of(result);
             }
@@ -62,14 +62,34 @@ public class MasterMapelServiceImpl implements MasterMapelService {
     }
 
     @Override
-    public Optional<MapelResponse> save(MapelRequest request) {
+    public Optional<KurikulumResponse> save(KurikulumRequest request) {
         try {
-            var url = backEndUrl.mapelUrl();
-            HttpEntity<MapelRequest> httpEntity = new HttpEntity<>(request);
+            var url = backEndUrl.kurikulumUrl();
+            HttpEntity<KurikulumRequest> httpEntity = new HttpEntity<>(request);
             ResponseEntity<Response> response = restTemplate.postForEntity( url, httpEntity, Response.class);
             if (response.getStatusCode() == HttpStatus.OK) {
                 byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
-                MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
+                KurikulumResponse result = objectMapper.readValue(json, KurikulumResponse.class);
+                return Optional.of(result);
+            }
+        }catch (RestClientException e){
+            return Optional.empty();
+        }catch (IOException e){
+            throw new RuntimeException(e);
+        }
+        return Optional.empty();
+    }
+
+
+    @Override
+    public Optional<KurikulumResponse> update(KurikulumRequest request) {
+        try {
+            var url = Strings.concat(backEndUrl.kurikulumUrl(),"/"+ request.getId());
+            HttpEntity<KurikulumRequest> httpEntity = new HttpEntity<>(request);
+            ResponseEntity<Response> response = restTemplate.exchange( url, HttpMethod.PUT, httpEntity, Response.class);
+            if (response.getStatusCode() == HttpStatus.OK) {
+                byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
+                KurikulumResponse result = objectMapper.readValue(json, KurikulumResponse.class);
                 return Optional.of(result);
             }
         }catch (RestClientException e){
@@ -81,31 +101,13 @@ public class MasterMapelServiceImpl implements MasterMapelService {
     }
 
     @Override
-    public Optional<MapelResponse> update(MapelRequest request, String id) {
+    public Optional<KurikulumResponse> delete(KurikulumRequest request) {
         try {
-            var url = Strings.concat(backEndUrl.mapelUrl(), "/"+ id);
-            HttpEntity<MapelRequest> httpEntity = new HttpEntity<>(request);
-            ResponseEntity<Response> response = restTemplate.exchange( url, HttpMethod.PUT, httpEntity, Response.class);
+            var url = Strings.concat(backEndUrl.kurikulumUrl(),"/"+ request.getId());
+            ResponseEntity<Response> response = restTemplate.exchange( url, HttpMethod.DELETE, null, Response.class);
             if (response.getStatusCode() == HttpStatus.OK) {
                 byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
-                MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
-            }
-        }catch (RestClientException e){
-            return Optional.empty();
-        }catch (IOException e){
-            throw new RuntimeException(e);
-        }
-        return Optional.empty();
-    }
-
-    @Override
-    public Optional<MapelResponse> delete(String id) {
-        try {
-            var url = Strings.concat(backEndUrl.mapelUrl(), "/"+ id);
-            ResponseEntity<Response> response = restTemplate.exchange(url, HttpMethod.DELETE, null, Response.class);
-            if (response.getStatusCode() == HttpStatus.OK) {
-                byte[] json = objectMapper.writeValueAsBytes(Objects.requireNonNull(response.getBody()).getData());
-                MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
+                KurikulumResponse result = objectMapper.readValue(json, KurikulumResponse.class);
                 return Optional.of(result);
             }
         }catch (RestClientException e){
